--- a/sub3suite/src/enums/email/EmailEnum.ui
+++ b/sub3suite/src/enums/email/EmailEnum.ui
@@ -45,7 +45,7 @@
        </property>
        <item>
         <property name="text">
-         <string>EmailRep</string>
+         <string>TruMail</string>
         </property>
        </item>
       </widget>
