--- a/sub3suite/src/enums/mx/MXEnum.ui
+++ b/sub3suite/src/enums/mx/MXEnum.ui
@@ -45,7 +45,7 @@
        </property>
        <item>
         <property name="text">
-         <string>Domains</string>
+         <string>REVERSE MX</string>
         </property>
        </item>
       </widget>
@@ -146,12 +146,6 @@
       <enum>QFrame::Sunken</enum>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <property name="leftMargin">
-       <number>9</number>
-      </property>
-      <property name="rightMargin">
-       <number>9</number>
-      </property>
       <item>
        <widget class="QCheckBox" name="checkBoxMultipleTargets">
         <property name="text">
@@ -185,6 +179,20 @@
          </size>
         </property>
        </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_17">
+        <property name="text">
+         <string>*API Keys</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QToolButton" name="buttoApiKeys">
+        <property name="text">
+         <string>Keys...</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
