--- a/sub3suite/src/enums/ssl/SSLEnum.ui
+++ b/sub3suite/src/enums/ssl/SSLEnum.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>634</width>
+    <width>689</width>
     <height>367</height>
    </rect>
   </property>
@@ -28,6 +28,28 @@
    </property>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="labelOut">
+       <property name="text">
+        <string>OUT:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBoxOption">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <item>
+        <property name="text">
+         <string>SSL CERTIFICATE</string>
+        </property>
+       </item>
+      </widget>
+     </item>
      <item>
       <widget class="QLabel" name="labelModule">
        <property name="text">
