refactored sub3suite documentation

--- a/sub3suite/src/Dialogs/DocumentationDialog.ui
+++ b/sub3suite/src/Dialogs/DocumentationDialog.ui
@@ -42,9 +42,9 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QToolButton" name="buttonBack">
+      <widget class="QPushButton" name="buttonBack">
        <property name="text">
-        <string>  &lt;---  </string>
+        <string>Back</string>
        </property>
       </widget>
      </item>
