added ipdata module for ASN-Enum

--- a/sub3suite/src/enums/asn/ASNEnum.ui
+++ b/sub3suite/src/enums/asn/ASNEnum.ui
@@ -80,6 +80,11 @@
          <string>Bgpview</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>IpData</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item>
