removed documentation files from resources

--- a/sub3suite/res/themes/default.css
+++ b/sub3suite/res/themes/default.css
@@ -460,6 +460,14 @@ QPlainTextEdit {
     border-width: 1px;
 }
 
+QTextEdit[documentation="true"] {
+    background-color: black;
+    color: rgb(180,180,140);
+    border-style: solid;
+    border-color: black;
+    border-width: 1px;
+}
+
 QListView,
 QListView[inside_toolbox="true"] {
     background-color: rgb(25,25,25);
