--- a/sub3suite/src/enums/ns/NSEnum.ui
+++ b/sub3suite/src/enums/ns/NSEnum.ui
@@ -295,7 +295,10 @@
            <bool>true</bool>
           </property>
           <property name="selectionMode">
-           <enum>QAbstractItemView::SingleSelection</enum>
+           <enum>QAbstractItemView::ExtendedSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectItems</enum>
           </property>
           <attribute name="headerCascadingSectionResizes">
            <bool>true</bool>
