--- a/sub3suite/src/enums/ssl/SSLEnum.ui
+++ b/sub3suite/src/enums/ssl/SSLEnum.ui
@@ -70,11 +70,6 @@
          <string>Crstsh</string>
         </property>
        </item>
-       <item>
-        <property name="text">
-         <string>Certspotter</string>
-        </property>
-       </item>
       </widget>
      </item>
      <item>
@@ -266,7 +261,10 @@
            <bool>true</bool>
           </property>
           <property name="selectionMode">
-           <enum>QAbstractItemView::SingleSelection</enum>
+           <enum>QAbstractItemView::ExtendedSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectItems</enum>
           </property>
           <attribute name="headerCascadingSectionResizes">
            <bool>true</bool>
