--- a/sub3suite/res/themes/light.css
+++ b/sub3suite/res/themes/light.css
@@ -1,5 +1,5 @@
 QTabWidget::pane {
-    border-color: rgb(150,150,150);
+    border-color: rgba(140, 140, 140, 255);
     background-color: transparent;
     border-style: solid;
     border-top-width: 1px;
@@ -29,35 +29,30 @@ QTabBar::tab {
     border-color: rgb(150,150,150);
     border-style: solid;
     border-bottom-width: 0px;
-    color: rgb(101, 101, 86);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(200,200,200), stop: 0.5 rgb(200,200,200) stop:1 rgb(200, 200, 200));
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
+    color: black;
+    /*background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(210,210,210), stop: 0.5 rgb(210,210,210) stop:1 rgb(230, 230, 230));*/
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
 }
 
 QTabBar::tab:hover {
-    color: black;
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(230,230,230), stop: 0.5 rgb(230,230,230) stop:1 rgb(250, 250, 250));
 }
 
 QTabBar::tab:selected {
-    background-color: white;
-    color: rgb(141, 141, 106);
-}
-
-QTextEdit,
-QTableView,
-QTreeView,
-QListView,
-QPlainTextEdit {
-    color: black;
-    border-style: inset solid;
-    border-color: rgb(150,150,150);
-    border-width: 1px;
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(127, 127, 127, 255), stop:1 rgb(170, 170, 127));
+    color: white;
 }
 
 QFrame[default_frame="true"] {
     height: 45px;
     max-height: 45px;
     min-height: 45px;
-    background: rgb(200,200,200);
+    background-color: rgba(170, 170, 127, 100);
+    border-style: solid;
+    border-color: rgb(150,150,150);
+    border-width: 1px;
 }
 
 QProgressBar {
@@ -66,14 +61,17 @@ QProgressBar {
     min-height: 22px;
     text-align: center;
     color: black;
+    border-style: inset solid;
+    border-radius: 5px;
     border-width: 1px;
-    border-color: rgb(30,30,30);
-    border-style: solid;
-    background-color:rgb(207,207,207);
+    border-color: rgb(150,150,150);
+    background-color:white;
 }
 
 QProgressBar::chunk {
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 white, stop: 0.3 rgb(170, 170, 127));
+    border-style: inset solid;
+    border-radius: 5px;
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(130, 130, 130, 255), stop:1 rgb(170, 170, 127));
 }
 
 /****************************** ToolButton ******************************/
@@ -81,28 +79,48 @@ QToolButton {
     min-height: 12px;
     min-width: 50px;
     padding: 1.5px;
-    border-style: outset;
-    border-style: solid;
-    border-radius: 5px;
-    border-color: rgb(150,150,150);
-    color: white;
-    background: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(117, 117, 117, 255), stop:1 rgba(137, 137, 137, 255));
-}
-
-QPushButton{
-    min-height: 20px;
-    min-width: 73px;
-    padding: 1px;
     border-style: inset;
+    border-radius: 5px;
     border-width: 1px;
     border-color: rgb(150,150,150);
     border-style: solid;
     color: rgb(20,20,20);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(200,200,200), stop: 0.5 rgb(200,200,200) stop:1 rgb(200, 200, 200));
+    /*background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(210,210,210), stop: 0.5 rgb(210,210,210) stop:1 rgb(250, 250, 250));*/
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
 }
 
-QAction {
-    background: transparent;
+QToolButton:hover {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(220,220,220), stop: 0.5 rgb(220,220,220) stop:1 rgb(250, 250, 250));
+}
+
+QToolButton:pressed {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(230,230,230), stop: 0.5 rgb(230,230,230) stop:1 rgb(250, 250, 250));
+}
+
+QPushButton{
+    min-height: 21px;
+    min-width: 75px;
+    padding: 1px;
+    border-style: inset;
+    border-radius: 4px;
+    border-width: 1px;
+    border-color: rgb(150,150,150);
+    border-style: solid;
+    color: rgb(20,20,20);
+    /*background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(210,210,210), stop: 0.5 rgb(210,210,210) stop:1 rgb(250, 250, 250));*/
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
+}
+
+QPushButton:disabled {
+    color: grey;
+}
+
+QPushButton:hover {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(220,220,220), stop: 0.5 rgb(220,220,220) stop:1 rgb(250, 250, 250));
+}
+
+QPushButton:pressed {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(230,230,230), stop: 0.5 rgb(230,230,230) stop:1 rgb(250, 250, 250));
 }
 
 QComboBox {
@@ -112,6 +130,17 @@ QComboBox {
     padding-right: 1px;
     padding-top: 1px;
     padding-bottom: 1px;
+    border-style: solid;
+    border-color: rgb(150,150,150);
+    border-width: 1px;
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 100), stop:1 rgb(255, 255, 255));
+}
+
+QComboBox::drop-down {
+    image: url(:/img/res/icons/light_down.png);
+    padding-top: 3px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 QStatusBar {
@@ -130,15 +159,15 @@ QMenuBar[project="true"] {
 }
 
 QMenuBar::item:disabled {
-    color: grey;
+    color: rgb(220,220,220);
 }
 
 QLabel[dark="true"] {
-    border-style: outset;
+    border-style: inset;
     border-style: solid;
     border-width: 1px;
     border-color: rgb(150,150,150);
-    background-color: transparent;
+    background-color: rgba(170, 170, 127, 100);
 }
 
 QScrollArea {
@@ -148,17 +177,202 @@ QScrollArea {
     border-color: rgb(150,150,150);
 }
 
+QToolBox QWidget {
+    background-color: rgba(240,240,240);
+}
+
 QToolBox QScrollArea {
+    border-style: solid;
+    border-width: 1px;
+}
+
+QToolBox::tab {
+    padding-left: 12px;
+    color: black;
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
     border-style: solid;
     border-width: 1px;
     border-color: rgb(150,150,150);
 }
 
-QToolBox::tab {
-    padding-left: 12px;
-    color: rgb(101, 101, 86);
-    background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(200,200,200), stop: 0.5 rgb(200,200,200) stop:1 rgb(200, 200, 200));
-    border-style: solid;
-    border-width: 1px;
+/****************************** ScrollBar ******************************/
+QScrollBar:horizontal {
+    height: 18px;
+    margin: 4px 16px 4px 16px;
+    border: 0;
+    border-radius: 4px;
+    background-color: transparent;
+}
+
+QScrollBar::handle:horizontal {
+    background-color: rgba(170, 170, 127, 130);
+    min-width: 5px;
+    border-radius: 4px;
+}
+
+QScrollBar::handle:horizontal:hover {
+    background-color: rgba(170, 170, 127, 100);
+    min-width: 5px;
+    border-radius: 4px;
+}
+
+QScrollBar::add-line:horizontal {
+    margin: 0px 3px 0px 3px;
+    border-image: url(:/light_theme/res/themes/light/right.png);
+    height: 10px;
+    width: 10px;
+    subcontrol-position: right;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::sub-line:horizontal {
+    margin: 0px 3px 0px 3px;
+    border-image: url(:/light_theme/res/themes/light/left.png);
+    height: 10px;
+    width: 10px;
+    subcontrol-position: left;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::add-line:horizontal:hover,
+QScrollBar::add-line:horizontal:on {
+    border-image: url(:/light_theme/res/themes/light/right_on.png);
+    height: 10px;
+    width: 10px;
+    subcontrol-position: right;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::sub-line:horizontal:hover,
+QScrollBar::sub-line:horizontal:on {
+    border-image: url(:/light_theme/res/themes/light/left_on.png);
+    height: 10px;
+    width: 10px;
+    subcontrol-position: left;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::up-arrow:horizontal,
+QScrollBar::down-arrow:horizontal,
+QScrollBar::add-page:horizontal,
+QScrollBar::sub-page:horizontal {
+    background: none;
+}
+
+QScrollBar:vertical {
+    background-color: transparent;
+    width: 18px;
+    margin: 16px 4px 16px 4px;
+    border-radius: 4px;
+}
+
+QScrollBar::handle:vertical {
+    background-color: rgba(170, 170, 127, 130);
+    min-height: 24px;
+    border-radius: 4px;
+}
+
+QScrollBar::handle:vertical:hover {
+    background-color: rgba(170, 170, 127, 100);
+    min-height: 24px;
+    border-radius: 4px;
+}
+
+QScrollBar::sub-line:vertical {
+    margin: 3px 0px 3px 0px;
+    border-image: url(:/light_theme/res/themes/light/up.png);
+    height: 10px;
+    width: 10px;
+    subcontrol-position: top;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::add-line:vertical {
+    margin: 3px 0px 3px 0px;
+    border-image: url(:/light_theme/res/themes/light/down.png);
+    height: 10px;
+    width: 10px;
+    subcontrol-position: bottom;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::sub-line:vertical:hover,
+QScrollBar::sub-line:vertical:on {
+    border-image: url(:/light_theme/res/themes/light/up_on.png);
+    height: 10px;
+    width: 10px;
+    subcontrol-position: top;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::add-line:vertical:hover,
+QScrollBar::add-line:vertical:on {
+    border-image: url(:/light_theme/res/themes/light/down_on.png);
+    height: 10px;
+    width: 10px;
+    subcontrol-position: bottom;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::up-arrow:vertical,
+QScrollBar::down-arrow:vertical,
+QScrollBar::add-page:vertical,
+QScrollBar::sub-page:vertical {
+    background: none;
+}
+
+QCheckBox {
+    color: black;
+    padding: 2px;
+}
+
+QCheckBox:disabled {
+    color: grey;
+    padding: 2px;
+}
+
+QCheckBox::indicator:checked,
+QGroupBox::indicator:checked {
+    border-style:solid;
+    border-width:1px;
     border-color: rgb(150,150,150);
+    image: url(:/img/res/icons/checkBox.png);
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
+}
+
+QCheckBox::indicator:unchecked,
+QGroupBox::indicator:unchecked {
+    border-style:solid;
+    border-width:1px;
+    border-color: rgb(150,150,150);
+    background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
+}
+
+QCheckBox::indicator:disabled {
+    background-color: grey;
+}
+
+QMainWindow {
+    background-color: rgba(240, 240, 240, 255);
+}
+
+QDialog {
+    min-width: 400px;
+    background-color: rgba(240, 240, 240, 255);
+}
+
+/****************************** Splitter ******************************/
+QSplitter::handle:horizontal {
+    background-color: transparent;
+    width: 8px;
+}
+
+QSplitter::handle:vertical{
+    background-color: transparent;
+    height: 8px;
+}
+
+QTreeView[no_item_border="true"] {
+    border-style: solid;
+    border-width: 0px;
 }
