--- a/sub3suite/src/widgets/InputWidget.ui
+++ b/sub3suite/src/widgets/InputWidget.ui
@@ -109,6 +109,9 @@
        <property name="editTriggers">
         <set>QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed</set>
        </property>
+       <property name="alternatingRowColors">
+        <bool>true</bool>
+       </property>
        <property name="selectionMode">
         <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
