--- a/sub3suite/res/themes/light.css
+++ b/sub3suite/res/themes/light.css
@@ -32,7 +32,6 @@ QTabBar::tab {
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     color: black;
-    /*background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(210,210,210), stop: 0.5 rgb(210,210,210) stop:1 rgb(230, 230, 230));*/
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
 }
 
@@ -85,7 +84,6 @@ QToolButton {
     border-color: rgb(150,150,150);
     border-style: solid;
     color: rgb(20,20,20);
-    /*background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(210,210,210), stop: 0.5 rgb(210,210,210) stop:1 rgb(250, 250, 250));*/
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
 }
 
@@ -107,7 +105,6 @@ QPushButton{
     border-color: rgb(150,150,150);
     border-style: solid;
     color: rgb(20,20,20);
-    /*background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(250, 250, 250),stop: 0.4 rgb(210,210,210), stop: 0.5 rgb(210,210,210) stop:1 rgb(250, 250, 250));*/
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 150), stop:1 rgb(255, 255, 255));
 }
 
@@ -134,6 +131,10 @@ QComboBox {
     border-color: rgb(150,150,150);
     border-width: 1px;
     background-color: qlineargradient(spread:pad, x1:0.5, y1:1, x2:0.5, y2:0, stop:0 rgba(170, 170, 127, 100), stop:1 rgb(255, 255, 255));
+}
+
+QComboBox QWidget {
+    background-color: white;
 }
 
 QComboBox::drop-down {
