--- a/sub3suite/res/themes/light.css
+++ b/sub3suite/res/themes/light.css
@@ -374,6 +374,11 @@ QScrollBar::sub-page:vertical {
 QCheckBox {
     color: black;
     padding: 2px;
+    background-color: transparent;
+}
+
+QGroupBox {
+    background-color: rgba(230, 230, 230, 255);
 }
 
 QCheckBox:disabled {
