--- a/sub3suite/src/enums/mx/MXEnum.ui
+++ b/sub3suite/src/enums/mx/MXEnum.ui
@@ -29,13 +29,6 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="labelModule">
-       <property name="text">
-        <string>MODULE:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QComboBox" name="comboBoxEngine">
        <property name="minimumSize">
         <size>
@@ -45,22 +38,22 @@
        </property>
        <item>
         <property name="text">
-         <string>DNSLytics</string>
+         <string>DNSLytics Module</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>ViewDns</string>
+         <string>ViewDns Module</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>WhoIsXMLAPI</string>
+         <string>WhoIsXMLAPI Module</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>DomainTools</string>
+         <string>DomainTools Module</string>
         </property>
        </item>
       </widget>
