--- a/sub3suite/res/themes/default.css
+++ b/sub3suite/res/themes/default.css
@@ -45,6 +45,8 @@ QTabBar::tab {
     border-width: 1px;
     border-color: rgb(25,25,25);
     border-bottom-width: 0px;
+    border-top-right-radius: 4px;
+    border-top-left-radius: 4px;
 }
 
 QTabBar::tab:selected {
@@ -505,6 +507,7 @@ QPushButton:disabled {
     border-style: solid;
     border-color: rgb(15,15,15);
     border-width: 1px;
+    border-radius: 4px;
     color: grey;
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(70, 70, 70),stop: 0.4 rgb(45,45,45), stop: 0.5 rgb(45,45,45) stop:1 rgb(70, 70, 70));
 }
@@ -516,6 +519,7 @@ QPushButton:!hover {
     border-style: solid;
     border-color: rgb(15,15,15);
     border-width: 1px;
+    border-radius: 4px;
     color: rgb(180, 180, 140);
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(50, 50, 50),stop: 0.4 rgb(25,25,25), stop: 0.5 rgb(25,25,25) stop:1 rgb(50, 50, 50));
 }
@@ -524,6 +528,7 @@ QPushButton:hover {
     border-style: solid;
     border-color: rgb(15,15,15);
     border-width: 1px;
+    border-radius: 4px;
     color: rgb(170, 170, 127);
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(60, 60, 60),stop: 0.4 rgb(40, 40, 40), stop: 0.5 rgb(40, 40, 40) stop:1 rgb(60, 60, 60));
 }
@@ -532,6 +537,7 @@ QPushButton:pressed {
     border-style: solid;
     border-color: rgb(15,15,15);
     border-width: 1px;
+    border-radius: 4px;
     color: rgb(170, 170, 127);
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1,stop:0 rgb(65, 65, 65),stop: 0.4 rgb(45, 45, 45), stop: 0.5 rgb(45, 45, 45) stop:1 rgb(65, 65, 65));
 }
