--- a/sub3suite/src/enums/asn/ASNEnum.ui
+++ b/sub3suite/src/enums/asn/ASNEnum.ui
@@ -29,13 +29,6 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
-      <widget class="QLabel" name="labelOut">
-       <property name="text">
-        <string>OUT:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QComboBox" name="comboBoxOption">
        <property name="minimumSize">
         <size>
@@ -61,13 +54,6 @@
       </widget>
      </item>
      <item>
-      <widget class="QLabel" name="labelModule">
-       <property name="text">
-        <string>MODULE:</string>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QComboBox" name="comboBoxEngine">
        <property name="minimumSize">
         <size>
@@ -77,12 +63,12 @@
        </property>
        <item>
         <property name="text">
-         <string>Bgpview</string>
+         <string>bgpview Module</string>
         </property>
        </item>
        <item>
         <property name="text">
-         <string>IpData</string>
+         <string>ipdata Module</string>
         </property>
        </item>
       </widget>
